# tracer-cloud

./: .dockerignore  .env.template  .gitattributes  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  ci.Dockerfile  docker-compose.yml  install-tracer.sh  installation-script-development.sh  installation-script.sh  start.sh  tracer.toml
.config/: nextest.toml
.github/: pull_request_template.md
.github/workflows/: build-and-test.yml  cross-platform-release-and-assets-upload-on-s3.yml  cross-platform-release-and-assets-upload.yml  cross-platform-release.yml  docker-build-and-push.yml  publish_test.yml  s3caching.yml
deployments/: Dockerfile
deployments/infrastructure/: main.tf  script-install-deps.sh
deployments/infrastructure/test/: launch-template.tf  main.tf
deployments/pipeline_tests/: Dockerfile  setup_instance.sh
deployments/scripts/: prepare_test_env.sh
deployments/tests/: Dockerfile  Dockerfile.parallel
e2e-tests/aws-batch/: validate_batch_runs.py
e2e-tests/aws-batch/tracer-test-pipelines-bioinformatics/cloudformation/: nextflow-batch.yml
e2e-tests/aws-batch/tracer-test-pipelines-bioinformatics/job-definitions/: proteinfold-with-tracer.json  rnaseq-with-tracer.json
e2e-tests/aws-batch/tracer-test-pipelines-bioinformatics/nextflow-config/: proteinfold.config
examples/: ec2_tests.rs  loki_experiment.rs  otel_compliance.config  otel_compliance.rs  s3_tests.rs
infrastructure/: .gitignore  .terraform.lock.hcl  1-launch-ec2.sh  README.md  main.tf  package.json  pnpm-lock.yaml  script-install-deps.sh  shutdown-ec2.tf  terraform.tfstate  terraform.tfstate.backup  user-data.sh.tpl
infrastructure/ec2-tracer-sandbox/: main.tf  outputs.tf  script-install-deps.sh  variables.tf
infrastructure/launch_template/: main.tf  setup-tracer.sh  variable.tf
infrastructure/modules/ec2_common/: main.tf  outputs.tf  variable.tf
infrastructure/modules/rds/: main.tf  outputs.tf  variables.tf
migrations/: 20250217170009_create_batch_logs_table.sql
src/: event_recorder.rs  exporter.rs  file_watcher.rs  lib.rs  main.rs  process_watcher.rs  submit_batched_data.rs  tracer_client.rs  tracing.rs
src/cli/: mod.rs  nondaemon_commands.rs
src/cloud_providers/aws/: mod.rs  pricing.rs  s3.rs
src/config_manager/: config.rs
src/config_manager/target_process/: target_matching.rs  targets_list.rs
src/daemon_communication/: client.rs  server.rs  structs.rs
src/db/: aurora_client.rs  global.rs  mod.rs
src/debug_log/: mod.rs
src/events/: mod.rs  recorder.rs  run_details.rs
src/exporters/: db.rs  fs.rs  mod.rs  s3.rs
src/extracts/: file_watcher.rs  mod.rs  process_watcher.rs
src/extracts/metrics/: mod.rs
src/extracts/stdout/: mod.rs
src/extracts/syslog/: mod.rs
src/http_client/: mod.rs
src/metrics/: mod.rs
src/stdout/: mod.rs
src/syslog/: mod.rs
src/tests/: goal_based_tests.rs  mod.rs  tracer_tests.rs
src/types/: aws_region.rs  config.rs  metrics.rs  mod.rs  parquet.rs
src/types/aws/: mod.rs  pricing.rs
src/types/cli/: mod.rs
src/types/event/: aws_metadata.rs  mod.rs
src/types/event/attributes/: mod.rs  process.rs  syslog.rs  system_metrics.rs
src/upload/: upload_to_signed_url.rs
src/utils/: mod.rs  submit_batched_data.rs
src/utils/debug_log/: mod.rs
src/utils/http_client/: mod.rs
src/utils/upload/: mod.rs  presigned_url_put.rs  upload_to_signed_url.rs
test-files/exports/test_run/: bd01d5c9-8658-4a22-b059-3d504f346f8e.parquet
test-files/scripts/: monitor.sh  sim_fileopens.py  track_datasets.sh
test-files/test-data-samples/: test2.fa
tests/: parallel.rs  simple_queries.rs
tests/common/: mod.rs
