[package]
name = "tracer"
version = "0.0.130"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
assert_cmd = "2.0.15"
async-recursion = "1.1.1"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.7", features = ["derive"] }
daemonize = "0.5"
homedir = "0.2.1"
lazy_static = "1.5.0"
log = "0.4.21"
octocrab = "0.38.0"
predicates = "3.1.2"
regex = "1.10.6"
random-string = "1.1.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["std", "derive", "serde_derive"] }
serde_json = "1.0.117"
serial_test = "3.1.1"
sysinfo = "0.30"
tempfile = "3.11.0"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = "0.7.11"
toml = "0.8.14"
tracing = {version = "0.1.40"}
url = "2.5.2"
linemux = "0.3.0"
tokio-stream = "0.1.15"
futures-util = "0.3.30"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres"] }

parquet = "53.3.0"
arrow = "53.3.0"

ec2_instance_metadata = "0.3.0"
rand = "0.8.5"
uuid = { version = "1.11.1", features = [ "v4", "fast-rng", "macro-diagnostics"] }
once_cell = "1.20.2"

aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.69.0"
aws-sdk-pricing = "1.59.0"
aws-credential-types = "1.2.1"

tracing-log = "0.2.0"
tracing-loki = "0.2.5"

tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
dirs = "6.0.0"
async-trait = "0.1.85"
sha2 = "0.10.8"
serde-query = "0.2.0"
itertools = "0.14.0"

[dev-dependencies]
env_logger = "0.9"
tempdir = "0.3.7"
dotenv = "0.15"
tokio-test = "0.4"
